modules/formulize/templates/css/formulize-admin.css
/* ... */
#popupsavewarning {
  padding-top: 1.75em;
  display: none;
  color: red; }

#admin_toolbar.toolbar_fixed #savebutton input {
  margin-bottom: 0; }

#admin_toolbar.toolbar_fixed #savewarning {
  float: none;
  margin-left: 165px;
  margin-bottom: 0; }

/* Develop a consistent style for forms */
/* form > fieldset > ol > li > fieldset or input or select */
/* Using http://www.alistapart.com/articles/prettyaccessibleforms/ */
.code {
  font-family: "Courier New", Courier, monospace; }

.checkbox-table-cell input {
  margin-right: 8em; }

.smallhead {
  margin-top: -0.5em;
  font-size: 10pt; }

.addeffectbutton {
  margin-bottom: 1.5em; }

div.customeffect {
  padding-left: 1em; }

form fieldset {
  margin-bottom: 10px;
  border: 1px solid #0085b6;
  /*padding: 6px;*/
  padding: 0.5em; }

form legend {
  padding: 0 2px;
  font-weight: bold;
  color: #0085b6;
  white-space: normal; }

span.user_groups {
  color: #808080;
  font-size: smaller;
  font-style: italic; }

#user_perms_accordion_box {
  width: 600px; }

li.user_perms_li {
  list-style-type: disc !important;
  margin-left: 30px !important;
  padding: 0; }

li.user_perms_li_li {
  list-style-type: circle !important;
  margin-left: 50px !important;
  padding: 0; }

form div.form-item {
  margin: 0 0 2.5em 0; }

form div.form-item > fieldset {
  border-radius: 5px; }

form label {
  display: inline-block;
  vertical-align: top;
  padding: 0 4px 0 0; }

form fieldset fieldset {
  /*  border: none; 
    margin: 3px 0 0 0;
      padding: 0;*/ }

form fieldset fieldset legend {
  /*padding: 0 0 5px;
  font-weight: normal;*/ }

form fieldset fieldset label {
  /*  display: block;
    width: auto; */ }

form .required em {
  font-weight: bold;
  font-style: normal;
  color: #f00; }

label.question {
  margin: 0.5em 0;
  display: block;
  text-align: left !important; }

form fieldset fieldset label {
  /*  margin-left: 163px; /* Width plus 3 (html space) */ }

div.description {
  clear: both;
  font-style: italic;
  font-size: 80%;
  color: #666;
  padding-top: 10px;
  text-align: left !important; }

.homepage-description {
  margin-bottom: 1em;
  margin-top: -20px; }

form textarea {
  width: 80%; }

form .input-text {
  border: 1px solid #0085b6;
  /*margin: 0.5em 0 0.5em 1em;*/
  width: 270px; }

input:focus, select:focus, textarea:focus {
  background: #FFFCCF; }

form .form-radios, form .form-multiple-select {
  /*margin: 0.5em 0 0.25em 1em;*/ }

form .radio-inline {
  float: left; }

form fieldset ol {
  margin: 0;
  padding: 0; }

form fieldset li {
  padding: 5px;
  margin: 0; }

form .groupselectionbox, form .permissiongroup {
  margin-left: 30px; }

form .groupselectionbox {
  margin-bottom: 20px; }

.conditionsdelete {
  color: red !important;
  font-weight: bold; }

#sortable-list .ui-accordion-header a:hover {
  cursor: move !important; }

.accordion-name {
  cursor: pointer !important; }

/* remove the horizontal scroll-bar */
#icms-page {
  padding: 0; }

/* remove full justification */
.admin-ui .content {
  text-align: left; }

/* tooltips */
/* blue: #0085B6 */
/* yellow: #FFFFAA */
#tooltip {
  position: absolute;
  z-index: 9999;
  width: 240px;
  color: #FFFFFF;
  background: #0085B6; }

#tooltip .tipHeader {
  height: 8px;
  -moz-border-radius-topleft: 75px;
  border-top-left-radius: 75px;
  -moz-border-radius-topright: 75px;
  border-top-right-radius: 75px;
  -moz-border-radius-bottomleft: 0px;
  border-bottom-left-radius: 0px;
  -moz-border-radius-bottomright: 0px;
  border-bottom-right-radius: 0px; }

#tooltip .tipBody {
  padding-left: 8px;
  padding-right: 8px;
  -moz-border-radius-topleft: 0px;
  border-top-left-radius: 0px;
  -moz-border-radius-topright: 0px;
  border-top-right-radius: 0px;
  -moz-border-radius-bottomleft: 0px;
  border-bottom-left-radius: 0px;
  -moz-border-radius-bottomright: 0px;
  border-bottom-right-radius: 0px; }

#tooltip .tipFooter {
  height: 8px;
  -moz-border-radius-topleft: 0px;
  border-top-left-radius: 0px;
  -moz-border-radius-topright: 0px;
  border-top-right-radius: 0px;
  -moz-border-radius-bottomleft: 75px;
  border-bottom-left-radius: 75px;
  -moz-border-radius-bottomright: 75px;
  border-bottom-right-radius: 75px; }

/* patch div */
#formulize-patch-panel {
  float: right;
  padding-left: 1em;
  width: 50%;
  height: 13em;
  overflow: auto;
  border: 1px solid blue; }

/*# sourceMappingURL=formulize-admin.css.map */

